# API-Flask-NLP

./: .gitignore  pyproject.toml
api_nlp/: app.py  model.joblib
tests/: test_api_nlp.py
