[tool.poetry]
name = "api_nlp"
version = "0.1.0"
description = ""
authors = ["Joscelino Oliveira <joscelino.oliveira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0"
joblib = "^1.0.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.5b2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
